...
              }
            : {}),
        }}
      />
      <Tabs.Screen
        name="account"
        options={{ title: t('mobile.tabs.account'), tabBarButtonTestID: 'tab-account' }}
      />
    </Tabs>
  );
}

